tests/parser/tests/cases/should_fail/invalid_unicode_char/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:8
1 |   k := '\u{00000000000}'; // This is an invalid unicode char as it too big.
  |          ^^^^^^^^^^^^^^ here
  = note: Invalid character escape sequence Unicode escape literal must be at most 6 hex digits.
